# Kleinod

./: .gitignore  CMakeLists.txt  README.md  main.cpp  package.json
include/engine/: engine.h
include/engine/ecs/: Ecs.h  Entity.h  System.h
include/engine/ecs/components/graphics/: Camera.h  SpriteComponent.h
include/engine/ecs/components/physics/: ColliderComponent.h
include/engine/ecs/components/physics/rigidbody/: PositionComponent.h  RigidbodyComponent.h  VelocityComponent.h
include/engine/ecs/entities/: Boid2D.h
include/engine/ecs/system/: BoidSystem.h
include/engine/ecs/system/core/: GraphicsSystem.h  PhysicsSystem.h  PositionSystem.h  Quadtree.h  quadtree.h
include/engine/graphics/: SpriteMap.h
include/game/: game.h
src/engine/: engine.cpp
src/engine/ecs/: Ecs.cpp  Entity.cpp  System.cpp
src/engine/ecs/components/graphics/: Camera.cpp  GraphicsSystem.cpp  SpriteComponent.cpp
src/engine/ecs/components/physics/rigidbody/: PositionComponent.cpp  RigidbodyComponent.cpp  VelocityComponent.cpp
src/engine/ecs/entities/: Boid2D.cpp
src/engine/ecs/system/: BoidSystem.cpp
src/engine/ecs/system/core/: GraphicsSystem.cpp  PhysicsSystem.cpp  PositionSystem.cpp  Quadtree.cpp  quadtree.cpp
src/engine/graphics/: SpriteMap.cpp
src/game/: game.cpp
